--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Blog Website</title>
     <style>
-   
+        body{
+            background-image: url('/images/CREATE.jpg');
+            background-size: cover;
+            }
       
       .container {
           
@@ -14,8 +17,8 @@
           padding: 20px;
           border: 1px solid #ccc;
           border-radius: 5px;
-          background-color: rgba(223, 187, 187, 0.452);
-          box-shadow: 0 0 10px 10px rgba(243, 95, 142, 0.605);
+          background-color: rgba(255, 255, 255, 0.628);
+          box-shadow: 0 0 10px 10px rgba(10, 6, 8, 0.605);
           align-items: center;
       }
 
