--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Blog Website</title>
+    <style>
+        body{
+            background-image: url('/imageS/show.JPG');
+            background-size: cover;
+        }
+    </style>
 </head>
-<body style="background-color: rgba(235, 226, 226, 0.087);">
+<body >
     <div class="container">
         <b><h1 class="mb-1" style=" font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; margin-top: 20px;"><%=article.title%></h1></b><br>
         <div class="text-muted mb-2">
